# ddd-reference-api-python

./: .gitignore  README.md  docker-compose.yml  dump.sql  pyproject.toml
app/: main.py
app/admin/: main.py
app/admin/adventures/: admin.py
app/admin/characters/: admin.py
app/admin/episodes/: admin.py
app/admin/locations/: admin.py
app/api/: base_deps.py  main.py  responses.py
app/api/adventures/: controllers.py  deps.py  serializers.py
app/api/characters/: controllers.py  deps.py  serializers.py
app/api/episodes/: controllers.py  deps.py
app/api/locations/: controllers.py  deps.py  serializers.py
app/api/system/: controllers.py
app/cli/: containers.py  enum.py  main.py
app/core/adventures/: domain.py  dto.py  orm.py  repositories.py  services.py
app/core/characters/: domain.py  dto.py  exceptions.py  orm.py  repositories.py  services.py
app/core/episodes/: domain.py  dto.py  exceptions.py  orm.py  repositories.py  services.py
app/core/locations/: domain.py  dto.py  exceptions.py  orm.py  repositories.py  services.py
app/core/shared/: domain.py  exceptions.py  mixins.py  pagination.py
app/infra/: database.py
settings/: .env.ci.runtests  .env.local.runtests  .env.local.template  config.py  infra.py
settings/enviroments/: base.py  ci_runtests.py  dev.py  dev_runtests.py  production.py
tests/: base_factories.py  docker-compose.yml
tests/integration/: conftest.py
tests/integration/adventures/: factories.py  test_get_active_adventures.py  test_get_adventure_detail.py  test_go_on_adventure.py
tests/unit/: base_factories.py
(+21 files in other folders)
